# memory-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.yaml  pyproject.toml  simple_stdio_test.py
.github/workflows/: docker.yml  test.yml
alembic/: env.py
alembic/versions/: 2169d77885d8_initial_migration_with_all_tables.py
memory_mcp_server/: __init__.py  assembly.py  cli.py  config.py
memory_mcp_server/database/: __init__.py  connection.py  models.py  repositories.py
memory_mcp_server/models/: __init__.py  alias.py  base.py  hint.py  note.py  observation.py
memory_mcp_server/protocols/: __init__.py  http_server.py  mcp_server.py
memory_mcp_server/services/: __init__.py  memory_service.py  search_service.py
memory_mcp_server/utils/: __init__.py  errors.py  logging.py  middleware.py  resilience.py
memory_mcp_server/web/: __init__.py  server.py
memory_mcp_server/web/static/: style.css
memory_mcp_server/web/templates/: aliases.html  base.html  dashboard.html  hints.html  notes.html  observations.html  search.html
tests/: __init__.py  conftest.py  test_integration.py  test_memory_service.py  test_models.py  test_repositories.py  test_search_service.py
